--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@
     color: black;
     text-align: left;
     padding: 80px;
-    background: #7fffd4 url(https://www.planwallpaper.com/static/images/awesome-japan-wallpaper-20182-21006-hd-wallpapers_tHogGUh.jpg);
+    background-image: url("japan.jpg");
     background-position: 65% 65%;
 }
 
