--- a/index.css
+++ b/index.css
@@ -74,7 +74,7 @@ nav ul li:hover {
 }
 
 .side img {
-    height: 350px;
+    height: 400px;
     margin-left: auto;
     margin-right: auto;
     display: block;
@@ -88,6 +88,10 @@ nav ul li:hover {
     box-shadow: inset -8px 0 10px -6px gray;
 }
 
+.main h1 {
+  margin: 40px;
+}
+
 .main p {
   font-size: 25px;
   margin: 40px;
@@ -98,6 +102,10 @@ nav ul li:hover {
     background-color: white;
     padding: 20px;
     box-shadow: inset 0 8px 10px -6px gray;
+}
+
+.portfolio h1 {
+  margin: 40px;
 }
 
 @media screen and (max-width: 700px) {
