--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2020,7 +2020,7 @@ input, select, textarea {
 		border-radius: 0.35em;
 		border: 0;
 		display: inline-block;
-		position: relative;
+        position: relative;
 	}
 
 		.image:before {
@@ -2028,8 +2028,8 @@ input, select, textarea {
 			-webkit-transition: opacity 0.2s ease-in-out;
 			-ms-transition: opacity 0.2s ease-in-out;
 			transition: opacity 0.2s ease-in-out;
-			background: url("images/overlay.png");
-			border-radius: 0.35em;
+			/* background: url("images/overlay.png"); */
+            border-radius: 0.35em;
 			content: '';
 			display: block;
 			height: 100%;
